--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Identity App</title>
         <script src="Identity.js"></script> 
-        <link rel="stylesheet" type="text/css" href="/Visma.css">
+        <link rel="stylesheet" type="text/css" href="Visma.css">
     </head>
     <body>
         <h1>Visma Identity App</h1>
@@ -11,13 +11,18 @@
         <div id="app"></div>
 
         <div>
-            <button class="button" onclick="changeURI('visma-identity://confirm?source=netvisor&paymentnumber=102226')">Confirm</button>
-            <button class="button" onclick="changeURI('visma-identity://sign?source=vismasign&documentid=105ab44')">Sign</button>
-            <button class="button" onclick="changeURI('visma-identity://login?source=severa')">Login (Severa)</button>
+            <button 
+                class="button" 
+                data-uri="visma-identity://confirm?source=netvisor&paymentnumber=102226" 
+                onclick="changeURI('visma-identity://confirm?source=netvisor&paymentnumber=102226')">Confirm</button>
+            <button 
+                class="button" 
+                data-uri="visma-identity://sign?source=vismasign&documentid=105ab44" 
+                onclick="changeURI('visma-identity://sign?source=vismasign&documentid=105ab44')">Sign</button>
+            <button 
+                class="button" 
+                data-uri="visma-identity://login?source=severa" 
+                onclick="changeURI('visma-identity://login?source=severa')">Login (Severa)</button>
         </div>
-
-        <script>
-            
-        </script>
     </body>
 </html>
