--- a/index.html
+++ b/index.html
@@ -26,7 +26,19 @@
         </div>
         <div>
             <input type="text" id="customURI" placeholder="Enter custom URI">
-            <button class="button" onclick="changeURI(document.getElementById('customURI').value)">Submit</button>
+            <button class="buttonWithout" onclick="changeURI(document.getElementById('customURI').value)">Submit</button>
         </div>
+
+        <div class="footer">
+            <h2>Description</h2>
+            <div class="description">
+              <p>This is a demonstration of the Visma Identity App, which allows users to confirm payments, sign documents, and login to various services using a custom URI scheme.
+              The app is built using JavaScript and allows users to test different URIs by entering them in the input field or by clicking on the provided buttons.
+              The URI is parsed and validated using regular expressions, and the path and parameters are displayed on the page.
+              This is only a demonstration and should not be used in production.
+              This app is open-source and available for anyone to use, modify and distribute.
+            </p>
+            </div>
+          </div>
     </body>
 </html>
