--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Visma Identity App</h1>
 
-        <div id="app"></div>
+        <div id="results"></div>
 
         <div>
             <button 
