Added description of the task

--- a/index.html
+++ b/index.html
@@ -30,13 +30,18 @@
         </div>
 
         <div class="footer">
-            <h2>Description</h2>
+            <h2>My thoughts of Visma challenge</h2>
             <div class="description">
-              <p>This is a demonstration of the Visma Identity App, which allows users to confirm payments, sign documents, and login to various services using a custom URI scheme.
-              The app is built using JavaScript and allows users to test different URIs by entering them in the input field or by clicking on the provided buttons.
-              The URI is parsed and validated using regular expressions, and the path and parameters are displayed on the page.
-              This is only a demonstration and should not be used in production.
-              This app is open-source and available for anyone to use, modify and distribute.
+              <p>First I was little bit shocked that this is way too hard for me.
+                Then I start reading what actually is the task and I breaked it into smaller tasks.
+                I started googling examples this kind of programs and I realized that I have
+                actually done something similar earlier in school when we used APIs data.
+                I just started doing step by step and first it doesn't work at all. 
+                Back to google to  check how to break that url into peaces and it started to work little bit.
+                Now I'm very proud of my result and I trust more of my skills to learn new things.
+                This takes me about 5 hours to do mostly beacause this was kind of new thing to me.
+                Hope you liked id and I wait to your response.
+                <br/><br/> Syrjänen Valtteri
             </p>
             </div>
           </div>
