--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         <div class="footer">
             <h2>My thoughts of Visma challenge</h2>
             <div class="description">
-              <p>At first I was a little bit shocked that this is way too hard for me.
-                Then I start reading what actually is the task and I breaked it into smaller tasks.
-                I started googling examples this kind of programs and I realized that I have
+              <p>At first I was a little bit shocked that this could be way too hard for me.
+                Then I started reading what is actually the task and I breaked it into a smaller tasks.
+                I started googling examples of this kind of programs and I realized that I have
                 actually done something similar earlier in the school when we used APIs data.
-                I just started writing code lines step by step and first it doesn't work at all. 
-                I dive back to google to check how to break that url into peaces and it started to work a little bit.
-                Now I'm very proud of my result and I trust more of my skills to learn new things in the future.
+                I just started writing code lines step by step and my first attempt it doesn't work at all. 
+                I dive back to google to check how to break that url into peaces and it started to work a little bit more.
+                Finally I'm very proud of my result and I trust more of my skills to learn new things in the future.
                 This takes me about four hours to do. Mostly beacause of this kind of topic was a bit unfamiliar to me.
-                Hope you like it and I am excited to hear your thoughts about my topic.
+                Hope you liked it and I am excited to hear your thoughts about my topic.
                 <br/><br/> Syrjänen Valtteri
             </p>
             </div>
